--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://aknosis.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
+title: aknosis.com
+subtitle: "webdev && sysadmin quips, tips, articles + more"
 author: Paul 'aknosis' Giberson
 simple_search: http://google.com/search
 description:
